[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tracing", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
base64 = "0.22"
envy = "0.4"
http = "1.1.0"
jsonwebtoken = "9"
rand = "0.8"
redis = { version = "0.27", features = ["aio", "tokio", "tokio-comp"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["request-id", "trace", "util", "set-header", "normalize-path", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
